--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -8,9 +8,10 @@
   -remove the previous directory
   -create a new directory for today's run
  -consider have a staging directory for approval before send out 
--optimize the case if pick number or percentage is high enough (i.e. pick number == number of files), 
+v-optimize the case if pick number or percentage is high enough (i.e. pick number == number of files), 
  then should not use random pick because this will very long to complete
- -should simply just leverage the File[] to pick the files, instead of putting it into a map
+ v-should simply just leverage the File[] to pick the files, instead of putting it into a map
+ v-now convert the File[] to LinkedList<File>, and use the remove(random) to get the files
 
 -build in some smartness:
  -track history picks to avoid picking the same album
