--- a/notes/todo.txt
+++ b/notes/todo.txt
@@ -8,7 +8,7 @@ Issues:
  e.g. howManyPhotosToPick=20
  folder has only 10 photos
  the email will say that "10 photos are picked out of 20 ==> 50.0%"
--can the counting of files ignore dot (.) files?
+DONE-can the counting of files ignore dot (.) files?
 
 --------------------------
 Enhancements, thoughts:
